// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exports of public entry points @apollo/client 1`] = `
[
  "ApolloCache",
  "ApolloClient",
  "ApolloConsumer",
  "ApolloError",
  "ApolloLink",
  "ApolloProvider",
  "Cache",
  "DocumentType",
  "HttpLink",
  "InMemoryCache",
  "MissingFieldError",
  "NetworkStatus",
  "Observable",
  "ObservableQuery",
  "checkFetcher",
  "concat",
  "createHttpLink",
  "createSignalIfSupported",
  "defaultDataIdFromObject",
  "defaultPrinter",
  "disableExperimentalFragmentVariables",
  "disableFragmentWarnings",
  "empty",
  "enableExperimentalFragmentVariables",
  "execute",
  "fallbackHttpConfig",
  "from",
  "fromError",
  "fromPromise",
  "getApolloContext",
  "gql",
  "isApolloError",
  "isReference",
  "makeReference",
  "makeVar",
  "mergeOptions",
  "operationName",
  "parseAndCheckHttpResponse",
  "parser",
  "resetApolloContext",
  "resetCaches",
  "rewriteURIForGET",
  "selectHttpOptionsAndBody",
  "selectHttpOptionsAndBodyInternal",
  "selectURI",
  "serializeFetchParameter",
  "setLogVerbosity",
  "split",
  "throwServerError",
  "toPromise",
  "useApolloClient",
  "useLazyQuery",
  "useMutation",
  "useQuery",
  "useReactiveVar",
  "useSubscription",
]
`;

exports[`exports of public entry points @apollo/client/cache 1`] = `
[
  "ApolloCache",
  "Cache",
  "EntityStore",
  "InMemoryCache",
  "MissingFieldError",
  "Policies",
  "cacheSlot",
  "canonicalStringify",
  "defaultDataIdFromObject",
  "fieldNameFromStoreName",
  "isReference",
  "makeReference",
  "makeVar",
]
`;

exports[`exports of public entry points @apollo/client/core 1`] = `
[
  "ApolloCache",
  "ApolloClient",
  "ApolloError",
  "ApolloLink",
  "Cache",
  "HttpLink",
  "InMemoryCache",
  "MissingFieldError",
  "NetworkStatus",
  "Observable",
  "ObservableQuery",
  "checkFetcher",
  "concat",
  "createHttpLink",
  "createSignalIfSupported",
  "defaultDataIdFromObject",
  "defaultPrinter",
  "disableExperimentalFragmentVariables",
  "disableFragmentWarnings",
  "empty",
  "enableExperimentalFragmentVariables",
  "execute",
  "fallbackHttpConfig",
  "from",
  "fromError",
  "fromPromise",
  "gql",
  "isApolloError",
  "isReference",
  "makeReference",
  "makeVar",
  "mergeOptions",
  "parseAndCheckHttpResponse",
  "resetCaches",
  "rewriteURIForGET",
  "selectHttpOptionsAndBody",
  "selectHttpOptionsAndBodyInternal",
  "selectURI",
  "serializeFetchParameter",
  "setLogVerbosity",
  "split",
  "throwServerError",
  "toPromise",
]
`;

exports[`exports of public entry points @apollo/client/errors 1`] = `
[
  "ApolloError",
  "isApolloError",
]
`;

exports[`exports of public entry points @apollo/client/link/batch 1`] = `
[
  "BatchLink",
  "OperationBatcher",
]
`;

exports[`exports of public entry points @apollo/client/link/batch-http 1`] = `
[
  "BatchHttpLink",
]
`;

exports[`exports of public entry points @apollo/client/link/context 1`] = `
[
  "setContext",
]
`;

exports[`exports of public entry points @apollo/client/link/core 1`] = `
[
  "ApolloLink",
  "concat",
  "empty",
  "execute",
  "from",
  "split",
]
`;

exports[`exports of public entry points @apollo/client/link/error 1`] = `
[
  "ErrorLink",
  "onError",
]
`;

exports[`exports of public entry points @apollo/client/link/http 1`] = `
[
  "HttpLink",
  "checkFetcher",
  "createHttpLink",
  "createSignalIfSupported",
  "defaultPrinter",
  "fallbackHttpConfig",
  "parseAndCheckHttpResponse",
  "rewriteURIForGET",
  "selectHttpOptionsAndBody",
  "selectHttpOptionsAndBodyInternal",
  "selectURI",
  "serializeFetchParameter",
]
`;

exports[`exports of public entry points @apollo/client/link/persisted-queries 1`] = `
[
  "PersistedQueryLink",
  "VERSION",
  "createPersistedQueryLink",
]
`;

exports[`exports of public entry points @apollo/client/link/retry 1`] = `
[
  "RetryLink",
]
`;

exports[`exports of public entry points @apollo/client/link/schema 1`] = `
[
  "SchemaLink",
]
`;

exports[`exports of public entry points @apollo/client/link/subscriptions 1`] = `
[
  "GraphQLWsLink",
]
`;

exports[`exports of public entry points @apollo/client/link/utils 1`] = `
[
  "createOperation",
  "fromError",
  "fromPromise",
  "throwServerError",
  "toPromise",
  "transformOperation",
  "validateOperation",
]
`;

exports[`exports of public entry points @apollo/client/link/ws 1`] = `
[
  "WebSocketLink",
]
`;

exports[`exports of public entry points @apollo/client/react 1`] = `
[
  "ApolloConsumer",
  "ApolloProvider",
  "DocumentType",
  "getApolloContext",
  "operationName",
  "parser",
  "resetApolloContext",
  "useApolloClient",
  "useLazyQuery",
  "useMutation",
  "useQuery",
  "useReactiveVar",
  "useSubscription",
]
`;

exports[`exports of public entry points @apollo/client/react/components 1`] = `
[
  "Mutation",
  "Query",
  "Subscription",
]
`;

exports[`exports of public entry points @apollo/client/react/context 1`] = `
[
  "ApolloConsumer",
  "ApolloProvider",
  "getApolloContext",
  "resetApolloContext",
]
`;

exports[`exports of public entry points @apollo/client/react/hoc 1`] = `
[
  "graphql",
  "withApollo",
  "withMutation",
  "withQuery",
  "withSubscription",
]
`;

exports[`exports of public entry points @apollo/client/react/hooks 1`] = `
[
  "useApolloClient",
  "useLazyQuery",
  "useMutation",
  "useQuery",
  "useReactiveVar",
  "useSubscription",
]
`;

exports[`exports of public entry points @apollo/client/react/parser 1`] = `
[
  "DocumentType",
  "operationName",
  "parser",
  "verifyDocumentType",
]
`;

exports[`exports of public entry points @apollo/client/react/ssr 1`] = `
[
  "RenderPromises",
  "getDataFromTree",
  "getMarkupFromTree",
  "renderToStringWithData",
]
`;

exports[`exports of public entry points @apollo/client/testing 1`] = `
[
  "MockLink",
  "MockSubscriptionLink",
  "MockedProvider",
  "createMockClient",
  "itAsync",
  "mockObservableLink",
  "mockSingleLink",
  "subscribeAndCount",
  "withErrorSpy",
  "withLogSpy",
  "withWarningSpy",
]
`;

exports[`exports of public entry points @apollo/client/testing/core 1`] = `
[
  "MockLink",
  "MockSubscriptionLink",
  "createMockClient",
  "itAsync",
  "mockObservableLink",
  "mockSingleLink",
  "subscribeAndCount",
  "withErrorSpy",
  "withLogSpy",
  "withWarningSpy",
]
`;

exports[`exports of public entry points @apollo/client/utilities 1`] = `
[
  "Concast",
  "DEV",
  "DeepMerger",
  "Observable",
  "addTypenameToDocument",
  "argumentsObjectFromField",
  "asyncMap",
  "buildQueryFromSelectionSet",
  "canUseDOM",
  "canUseLayoutEffect",
  "canUseSymbol",
  "canUseWeakMap",
  "canUseWeakSet",
  "checkDocument",
  "cloneDeep",
  "compact",
  "concatPagination",
  "createFragmentMap",
  "fixObservableSubclass",
  "getDefaultValues",
  "getDirectiveNames",
  "getFragmentDefinition",
  "getFragmentDefinitions",
  "getFragmentFromSelection",
  "getFragmentQueryDocument",
  "getInclusionDirectives",
  "getMainDefinition",
  "getOperationDefinition",
  "getOperationName",
  "getQueryDefinition",
  "getStoreKeyName",
  "getTypenameFromResult",
  "graphQLResultHasError",
  "hasClientExports",
  "hasDirectives",
  "isDocumentNode",
  "isField",
  "isInlineFragment",
  "isNonEmptyArray",
  "isNonNullObject",
  "isReference",
  "iterateObserversSafely",
  "makeReference",
  "makeUniqueId",
  "maybe",
  "maybeDeepFreeze",
  "mergeDeep",
  "mergeDeepArray",
  "mergeOptions",
  "offsetLimitPagination",
  "relayStylePagination",
  "removeArgumentsFromDocument",
  "removeClientSetsFromDocument",
  "removeConnectionDirectiveFromDocument",
  "removeDirectivesFromDocument",
  "removeFragmentSpreadFromDocument",
  "resultKeyNameFromField",
  "shouldInclude",
  "storeKeyNameFromField",
  "stringifyForDisplay",
  "valueToObjectRepresentation",
]
`;

exports[`exports of public entry points @apollo/client/utilities/globals 1`] = `
[
  "DEV",
  "InvariantError",
  "checkDEV",
  "global",
  "invariant",
  "maybe",
]
`;
